--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 id="titulo">API de direcciones:</h1>
-        <h3 id="descripcion">En este mapa se muestra la distancia y el recorrido desde la localización que el usuario ingresa hasta la Torre de las Comunicaciones de Antel.</h3>
+        <h3 id="descripcion">En este mapa se muestra la distancia y el recorrido desde la localización que el usuario ingresa hasta la Torre de las Telecomunicaciones de Antel.</h3>
     </header>
     <div id="user-input">
         <input type="text" id="direccion" placeholder="Ingresa una dirección">
